@@ -858,43 +858,51 @@ int32_t SPVM_RUNTIME_API_call_sub_vm(SPVM_ENV* env, int32_t sub_id, SPVM_VALUE* 
       {
         void* object1 = *(void**)&object_vars[opcode->operand0];
         void* object2 = *(void**)&object_vars[opcode->operand1];
-
-        int32_t length1 = *(SPVM_VALUE_int*)((intptr_t)object1 + (intptr_t)env->object_array_length_offset);
-        int32_t length2 = *(SPVM_VALUE_int*)((intptr_t)object2 + (intptr_t)env->object_array_length_offset);
         
-        SPVM_VALUE_byte* bytes1 = env->belems(env, object1);
-        SPVM_VALUE_byte* bytes2 = env->belems(env, object2);
-        
-        int32_t short_string_length = length1 < length2 ? length1 : length2;
-        int32_t retval = memcmp(bytes1, bytes2, short_string_length);
-        int32_t cmp;
-        if (retval) {
-          cmp = retval < 0 ? -1 : 1;
-        } else if (length1 == length2) {
-          cmp = 0;
-        } else {
-          cmp = length1 < length2 ? -1 : 1;
+        if (__builtin_expect(object1 == NULL || object2 == NULL, 0)) {
+          condition_flag = 0;
+          void* exception = env->new_str_raw(env, "Use of uninitialized value in string comparison operator", 0);
+          env->set_exception(env, exception);
+          exception_flag = 1;
         }
-        
-        switch (opcode_id) {
-          case SPVM_OPCODE_C_ID_STRING_EQ:
-            condition_flag = (cmp == 0);
-            break;
-          case SPVM_OPCODE_C_ID_STRING_NE:
-            condition_flag = (cmp != 0);
-            break;
-          case SPVM_OPCODE_C_ID_STRING_GT:
-            condition_flag = (cmp == 1);
-            break;
-          case SPVM_OPCODE_C_ID_STRING_GE:
-            condition_flag = (cmp >= 0);
-            break;
-          case SPVM_OPCODE_C_ID_STRING_LT:
-            condition_flag = (cmp == -1);
-            break;
-          case SPVM_OPCODE_C_ID_STRING_LE:
-            condition_flag = (cmp <= 0);
-            break;
+        else {
+          int32_t length1 = *(SPVM_VALUE_int*)((intptr_t)object1 + (intptr_t)env->object_array_length_offset);
+          int32_t length2 = *(SPVM_VALUE_int*)((intptr_t)object2 + (intptr_t)env->object_array_length_offset);
+          
+          SPVM_VALUE_byte* bytes1 = env->belems(env, object1);
+          SPVM_VALUE_byte* bytes2 = env->belems(env, object2);
+          
+          int32_t short_string_length = length1 < length2 ? length1 : length2;
+          int32_t retval = memcmp(bytes1, bytes2, short_string_length);
+          int32_t cmp;
+          if (retval) {
+            cmp = retval < 0 ? -1 : 1;
+          } else if (length1 == length2) {
+            cmp = 0;
+          } else {
+            cmp = length1 < length2 ? -1 : 1;
+          }
+          
+          switch (opcode_id) {
+            case SPVM_OPCODE_C_ID_STRING_EQ:
+              condition_flag = (cmp == 0);
+              break;
+            case SPVM_OPCODE_C_ID_STRING_NE:
+              condition_flag = (cmp != 0);
+              break;
+            case SPVM_OPCODE_C_ID_STRING_GT:
+              condition_flag = (cmp == 1);
+              break;
+            case SPVM_OPCODE_C_ID_STRING_GE:
+              condition_flag = (cmp >= 0);
+              break;
+            case SPVM_OPCODE_C_ID_STRING_LT:
+              condition_flag = (cmp == -1);
+              break;
+            case SPVM_OPCODE_C_ID_STRING_LE:
+              condition_flag = (cmp <= 0);
+              break;
+          }
         }
 
         break;
